refactor: AML 프로젝트 구조로 통일 (config/ 환경설정, scripts/ 실행스크립트, infra/ 번호접두사)
Co-authored-by: Cursor <cursoragent@cursor.com>